--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -8,7 +8,7 @@ WORKDIR /app
 RUN yarn install
 
 # Exponer el puerto del frontend
-EXPOSE 3000
+EXPOSE 5173
 
 # Comando por defecto para iniciar el servidor de desarrollo
-CMD ["yarn", "start"]
+CMD ["yarn", "dev"]
