--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.1",
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
