--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
-VITE_API_URL="http://localhost:8000/api"
-VITE_APP_URL="http://localhost:5173"
+VITE_API_URL="http://192.168.1.115:8000/api"
+VITE_APP_URL="http://192.168.1.115:5173"
