--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -17,6 +17,8 @@ services:
       - |
         composer install --no-interaction
         php artisan migrate --force
+        php artisan db:seed --force 
+        php artisan storage:link --force 
         php artisan serve --host=0.0.0.0 --port=8000
 
   frontend:
